# termusic

./: Cargo.toml
docs/requirements/: podcast-synchronization.md  pr720-review-feedback.md
docs/specifications/01-server-side-podcast-synchronization/prototype/: Cargo.toml  main.rs  run-output.txt
lib/proto/: player.proto
lib/src/: async_tui_phase1_tests.rs  lib.rs  player.rs  player_phase2_tests.rs  track.rs
playback/: Cargo.toml
playback/benches/: playlist_load_bench.rs
playback/src/: lib.rs  playlist.rs
playback/src/playlist/: parallel_load.rs
playback/tests/: phase1_migration_tests.rs  phase1_rayon_dependency_tests.rs  phase2_core_parallelization_tests.rs  phase2_server_metadata_population_tests.rs  phase4_performance_validation_tests.rs  playlist_parallel_load_tests.rs
server/: Cargo.toml
server/src/: async_loading_phase1_tests.rs  async_loading_phase2_tests.rs  async_loading_phase34_tests.rs  async_loading_phase3_tests.rs  async_loading_phase4_tests.rs  music_player_service.rs  podcast_sync.rs  podcast_sync_phase3_tests.rs  podcast_sync_phase4_tests.rs  podcast_sync_phase5_tests.rs  podcast_sync_scenario011_tests.rs  server.rs
server/tests/: phase1_server_handler_tests.rs
specification/02-pr720-review-feedback/: 01-requirements.md  02-bdd-scenarios.md  02-pr720-review-feedback-workflow-tracking.json  04-deep-research-report-1.md  05-deep-research-report-2.md  06-code-assessment.md  07-architecture.md  11-task-list.md  14-implementation-summary.md  15-qa-report.md  16-qa-report.md  17-qa-report.md  18-code-review-3.md  20-code-review-4.md
(+121 files in other folders)
