[package]
name = "podcast-sync-prototype"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "prototype"
path = "main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
rss = "2.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
